@@ -3,7 +3,6 @@ package com.sis.repository;
 import com.sis.domain.Strategies;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
@@ -16,45 +15,52 @@ import org.springframework.data.domain.PageImpl;
  */
 public class StrategiesRepositoryWithBagRelationshipsImpl implements StrategiesRepositoryWithBagRelationships {
 
+    private static final String ID_PARAMETER = "id";
+    private static final String STRATEGIESES_PARAMETER = "strategieses";
+
     @PersistenceContext
     private EntityManager entityManager;
 
     @Override
     public Optional<Strategies> fetchBagRelationships(Optional<Strategies> strategies) {
-        return strategies.map(this::fetchResources);
+        return strategies.map(this::fetchResourceses);
     }
 
     @Override
-    public Page<Strategies> fetchBagRelationships(Page<Strategies> strategies) {
-        return new PageImpl<>(fetchBagRelationships(strategies.getContent()), strategies.getPageable(), strategies.getTotalElements());
+    public Page<Strategies> fetchBagRelationships(Page<Strategies> strategieses) {
+        return new PageImpl<>(
+            fetchBagRelationships(strategieses.getContent()),
+            strategieses.getPageable(),
+            strategieses.getTotalElements()
+        );
     }
 
     @Override
-    public List<Strategies> fetchBagRelationships(List<Strategies> strategies) {
-        return Optional.of(strategies).map(this::fetchResources).orElse(Collections.emptyList());
+    public List<Strategies> fetchBagRelationships(List<Strategies> strategieses) {
+        return Optional.of(strategieses).map(this::fetchResourceses).orElse(List.of());
     }
 
-    Strategies fetchResources(Strategies result) {
+    Strategies fetchResourceses(Strategies result) {
         return entityManager
             .createQuery(
-                "select strategies from Strategies strategies left join fetch strategies.resources where strategies.id = :id",
+                "select strategies from Strategies strategies left join fetch strategies.resourceses where strategies.id = :id",
                 Strategies.class
             )
-            .setParameter("id", result.getId())
+            .setParameter(ID_PARAMETER, result.getId())
             .getSingleResult();
     }
 
-    List<Strategies> fetchResources(List<Strategies> strategies) {
+    List<Strategies> fetchResourceses(List<Strategies> strategieses) {
         HashMap<Object, Integer> order = new HashMap<>();
-        IntStream.range(0, strategies.size()).forEach(index -> order.put(strategies.get(index).getId(), index));
+        IntStream.range(0, strategieses.size()).forEach(index -> order.put(strategieses.get(index).getId(), index));
         List<Strategies> result = entityManager
             .createQuery(
-                "select strategies from Strategies strategies left join fetch strategies.resources where strategies in :strategies",
+                "select strategies from Strategies strategies left join fetch strategies.resourceses where strategies in :strategieses",
                 Strategies.class
             )
-            .setParameter("strategies", strategies)
+            .setParameter(STRATEGIESES_PARAMETER, strategieses)
             .getResultList();
-        Collections.sort(result, (o1, o2) -> Integer.compare(order.get(o1.getId()), order.get(o2.getId())));
+        result.sort((o1, o2) -> Integer.compare(order.get(o1.getId()), order.get(o2.getId())));
         return result;
     }
 }
